force-app/main/default/objects/Partner_Scorecard__c/Partner_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Captures the Scorecard values of the parent Partner Account (master) in fields</description>
    <label>Partner Scorecard</label>
    <nameField>
        <displayFormat>PS - {00000}</displayFormat>
        <label>Partner Scorecard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>