force-app/main/default/objects/Partner_Scorecard__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Refers to the Partner Account, the scorecard values of which are stored</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Scorecards</relationshipLabel>
    <relationshipName>Partner_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>