force-app/main/default/objects/Partner_Scorecard__c/fields/Current_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Current_Scorecard__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the Partner Scorecard for a Account is the current one or not</description>
    <inlineHelpText>Enable this check-box to make the values of this Scorecard visible on the Account detail page</inlineHelpText>
    <label>Current Scorecard</label>
    <type>Checkbox</type>
</CustomField>