force-app/main/default/objects/Partner_Scorecard__c/fields/Current_Year_Units_Goal__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Units_Goal__c</fullName>
    <description>Number field where the user will input the year&apos;s goal of Activated Units for the Partner</description>
    <label>Current Year Units Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>