force-app/main/default/objects/Partner_Scorecard__c/fields/Goal_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Goal_Attainment__c</fullName>
    <description>Calculated field that is the % of the YTD Activated/Current Year Unit Goal</description>
    <formula>IF( YTD_Customer_Activated_Units__c &gt; 0, YTD_Customer_Activated_Units__c / Current_Year_Units_Goal__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Goal Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>