force-app/main/default/objects/Partner_Scorecard__c/fields/Lead_Converion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converion_Rate__c</fullName>
    <description>Calculated field that determines the percent of leads that are converted to an account. Number of leads converted/ number of leads total</description>
    <formula>IF( Number_of_Leads_Total__c &gt; 0, Number_of_Leads_converted__c / Number_of_Leads_Total__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Converion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>