force-app/main/default/objects/Partner_Scorecard__c/fields/Number_of_Leads_Active__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads_Active__c</fullName>
    <description>Count of the Number of leads that are currently active and assigned to this partner</description>
    <label>Number of Leads Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>