force-app/main/default/objects/Partner_Scorecard__c/fields/Number_of_Leads_converted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads_converted__c</fullName>
    <description>Count of the Leads that were converted to an Account</description>
    <label>Number of Leads converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>