force-app/main/default/objects/Partner_Scorecard__c/fields/Number_of_Leads_Total__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads_Total__c</fullName>
    <description>Number of Leads that are associated to this partner</description>
    <label>Number of Leads Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>