force-app/main/default/objects/Partner_Scorecard__c/fields/Number_of_Qualcomm_provided_leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Qualcomm_provided_leads__c</fullName>
    <description>Number of Leads that were generated internally (Qualcomm)</description>
    <label>Number of Omnitracs provided leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>