force-app/main/default/objects/Partner_Scorecard__c/fields/Scorecard_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_End_Date__c</fullName>
    <description>The scorecard &apos;year&apos; end date</description>
    <label>Scorecard End Date</label>
    <type>Date</type>
</CustomField>