force-app/main/default/objects/Partner_Scorecard__c/fields/Scorecard_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Start_Date__c</fullName>
    <description>The scorecard &apos;year&apos; start date</description>
    <label>Scorecard Start Date</label>
    <type>Date</type>
</CustomField>