force-app/main/default/objects/Partner_Scorecard__c/fields/Total_Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Accounts__c</fullName>
    <description>Count of all the accounts owned by the Partner</description>
    <label>Total Number of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>