force-app/main/default/objects/Partner_Scorecard__c/fields/Total_Number_of_Contracted_Customers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Contracted_Customers__c</fullName>
    <description>Count of the number of customers who have signed a contract (those account that have a customer ID from Oracle)</description>
    <label>Total Number of Contracted Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>