force-app/main/default/objects/Partner_Scorecard__c/fields/Units_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Units_Closed_Won_Opportunities__c</fullName>
    <description>Count of the units on the opportunities that are in closed won status for this partner</description>
    <label>Units Closed Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>