force-app/main/default/objects/Partner_Scorecard__c/fields/Value_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_Closed_Won_Opportunities__c</fullName>
    <description>Dollar Summary of the Opportunities that are in closed Won status for this Partner (Agent Only)</description>
    <label>Value Closed Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>