force-app/main/default/objects/Partner_Scorecard__c/fields/YTD_Customer_Activated_Units__c.field-meta.xml
<CustomField>
    <fullName>YTD_Customer_Activated_Units__c</fullName>
    <description>No. of Units with an Activation Date since the start of the year</description>
    <label>YTD Customer Activated Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>