force-app/main/default/objects/Partner_Scorecard__c/fields/YTD_Customer_Shipped_Units__c.field-meta.xml
<CustomField>
    <fullName>YTD_Customer_Shipped_Units__c</fullName>
    <description>Count of the number of units that were shipped to customers owned by the partner</description>
    <label>YTD Customer Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>