force-app/main/default/objects/Partner_Scorecard__c/validationRules/Scorecard_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Scorecard_Date_Validation</fullName>
    <active>true</active>
    <description>Checks if the Scorecard End Date is after the Scorecard Start Date in Partner Accounts (Record Type : Partner Account Reseller)</description>
    <errorConditionFormula>Scorecard_End_Date__c &lt;  Scorecard_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Scorecard_End_Date__c</errorDisplayField>
    <errorMessage>Scorecard End Date must be later than the Scorecard Start Date</errorMessage>
</ValidationRule>